--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 body {
   background: rgba(192, 69, 69, 1);
   font-family: monospace;
+  font-size: 18px;
 }
 
 .App {
@@ -20,4 +21,24 @@ body {
 .FortuneCookieMessage {
   color: white;
   text-align: center;
+}
+
+.FortuneCookieMore {
+  background: rgba(255, 255, 255, 0.2);
+  font-family: monospace;
+  border: 1px solid black;
+  border-radius: 0px;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  padding: 10px;
+  display: inline-block;
+  color: white;
+  margin-top: 10px;
+}
+
+.FortuneCookieMore:hover,
+.FortuneCookieMore:focus {
+  background: rgba(255, 255, 255, 1);
+  color: black;
+  cursor: pointer;
 }
