--- a/src/FortuneCookie/styles.css
+++ b/src/FortuneCookie/styles.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 150px;
   transition: 0.1s top ease-out;
+  animation: vibrate 2s infinite;
+  transform: rotate(0deg);
   /* Center cookie vertically */
   position: relative;
   top: 0;
@@ -12,9 +14,34 @@
 
 .FortuneCookie--open {
   top: -75px;
+  animation: none;
 }
 
 .FortuneCookie img {
   height: 100%;
   cursor: pointer;
+}
+
+@keyframes vibrate {
+  0% {
+    transform: rotate(0deg);
+  }
+  30% {
+    transform: rotate(0deg);
+  }
+  40% {
+    transform: rotate(20deg);
+  }
+  45% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  55% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
